@@ -1,13 +1,10 @@
-requires "ExtUtils::CBuilder" => "0";
 requires "FFI::CheckLib" => "0";
-requires "File::ShareDir" => "0";
 requires "JSON::PP" => "0";
-requires "Module::Build" => "0.3601";
 requires "constant" => "1.32";
 requires "perl" => "5.008001";
 
 on 'build' => sub {
-  requires "Module::Build" => "0.3601";
+  requires "Module::Build" => "0.28";
 };
 
 on 'test' => sub {
@@ -21,7 +18,7 @@ on 'configure' => sub {
   requires "Config::AutoConf" => "0.309";
   requires "ExtUtils::CBuilder" => "0";
   requires "FFI::CheckLib" => "0.05";
-  requires "Module::Build" => "0.3601";
+  requires "Module::Build" => "0.28";
   requires "perl" => "5.008001";
 };
 
