@@ -33,7 +33,6 @@ diag_preamble = |     use Alien::FFI;
 diag_preamble = |     use FFI::Platypus;
 diag_preamble = |     use FFI::Platypus::ConfigData;
 diag_preamble = |     use FFI::Platypus::Memory;
-diag_preamble = |     use Module::Build::FFI;
 diag_preamble = |     diag "Alien::FFI version       = ", $Alien::FFI::VERSION;
 diag_preamble = |     diag "Alien::FFI->install_type = ", Alien::FFI->install_type;
 diag_preamble = |     diag "Alien::FFI->cflags       = ", Alien::FFI->cflags;
@@ -41,7 +40,6 @@ diag_preamble = |     diag "Alien::FFI->libs         = ", Alien::FFI->libs;
 diag_preamble = |     diag "Alien::FFI->dist_dir     = ", eval { Alien::FFI->dist_dir } || 'undef';
 diag_preamble = |     diag "Alien::FFI->version      = ", eval { Alien::FFI->config('version') } || 'unknown';
 diag_preamble = |     spacer();
-diag_preamble = |     diag "dlext[]=$_" for Module::Build::FFI->ffi_dlext;
 diag_preamble = |     my %type_map = %{ FFI::Platypus::ConfigData->config('type_map') };
 diag_preamble = |     my $diag = FFI::Platypus::ConfigData->config('diag');
 diag_preamble = |     foreach my $key (sort keys %{ $diag->{args} })
@@ -138,8 +136,6 @@ directory = examples
 
 [InsertExample]
 remove_boiler = 1
-
-[=inc::My::HeaderVersion]
 
 [Author::Plicease::Thanks]
 current = Graham Ollis <plicease@cpan.org>
