@@ -1,21 +1,0 @@
-#ifndef FFI_PERL_H
-#define FFI_PERL_H
-
-#define FFI_UTIL_VERSION %%FFI_UTIL_VERSION%%
-
-#ifdef _MSC_VER
-#define FFI_UTIL_EXPORT __declspec(dllexport)
-#else
-#define FFI_UTIL_EXPORT
-#endif
-
-#ifdef __cplusplus
-extern "C" {
-#endif
-
-#ifdef __cplusplus
-}
-#endif
-
-#endif
-
