@@ -15,7 +15,6 @@ $modules{$_} = $_ for qw(
   Config::AutoConf
   ExtUtils::CBuilder
   FFI::CheckLib
-  File::ShareDir
   JSON::PP
   Module::Build
   PkgConfig
@@ -29,7 +28,6 @@ $post_diag = sub {
     use FFI::Platypus;
     use FFI::Platypus::ConfigData;
     use FFI::Platypus::Memory;
-    use Module::Build::FFI;
     diag "Alien::FFI version       = ", $Alien::FFI::VERSION;
     diag "Alien::FFI->install_type = ", Alien::FFI->install_type;
     diag "Alien::FFI->cflags       = ", Alien::FFI->cflags;
@@ -37,7 +35,6 @@ $post_diag = sub {
     diag "Alien::FFI->dist_dir     = ", eval { Alien::FFI->dist_dir } || 'undef';
     diag "Alien::FFI->version      = ", eval { Alien::FFI->config('version') } || 'unknown';
     spacer();
-    diag "dlext[]=$_" for Module::Build::FFI->ffi_dlext;
     my %type_map = %{ FFI::Platypus::ConfigData->config('type_map') };
     my $diag = FFI::Platypus::ConfigData->config('diag');
     foreach my $key (sort keys %{ $diag->{args} })
